# advent-of-code

./: .gitignore
2021/aoc-rust/: Cargo.toml  README.md
2021/aoc-rust/src/: benchmark.rs  day_01.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_24.rs  day_25.rs  graph.rs  grid.rs  main.rs  space.rs  utils.rs
2022/: README.md
2022/python/: README.md  pyproject.toml
2022/python/aoc_python/: day_02.py  day_03.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  utils.py
2022/python/aoc_python/colloquium/: README.md  __init__.py  a_star.py  bfs.py  dfs.py  dijkstra.py  fw.py  problem_0  problem_1  problem_2  slides.md
2022/rust/: Cargo.toml
2022/rust/src/: main.rs  task_01.rs  task_02.rs
2023/rust/: Cargo.toml  create_day.sh
2023/rust/src/: day_01.rs  day_02.rs  day_06.rs  day_07.rs  day_09.rs  day_10.rs  (+10 more)
2024/: .eslintrc.json  .gcloudignore  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
2024/src/: array_tools.test.ts  array_tools.ts  benchmark.ts  bot.test.ts  bot.ts  cli.ts  example_leaderboard.json  index.ts  update.test.ts  utils.test.ts  utils.ts  vec.test.ts  vec.ts
2025/aoc-2025/: .gitignore
(+41 files in other folders)
