[tool.poetry]
name = "aoc-python"
version = "0.1.0"
description = ""
authors = ["Viktor <muller.viktor.muller@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_python"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
mypy = "^0.991"
pylint = "^2.15.8"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
